syntax = "proto3";

package proto;

option go_package = "github.com/Mitra-Apps/be-api-gateway/domain/proto/user;user";

import "google/api/annotations.proto";

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    string phone_number = 5;
    string avatar_image_id = 6;
    string access_token = 7;
    bool is_active = 8;
}

message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserLoginResponse{
    User user = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
        option (google.api.http) = {
            get: "/users"
        };
    }
    rpc Login(UserLoginRequest) returns (UserLoginResponse) {
        option (google.api.http) = {
            post: "/users/login"
        };
    }
}